Added item of menu

--- a/Сайт/gen8_page.html
+++ b/Сайт/gen8_page.html
@@ -13,7 +13,7 @@
  <nav class="one">
   <ul class="topmenu">
     <li><a href="main_page1.html">Главная</a><li>
-    <li><a href="#">Список поколений<i class="fa fa-angle-down"></i></a>
+    <li><a href="#">Список поколений конслоей<i class="fa fa-angle-down"></i></a>
       <ul class="submenu">
 		<li><a href="gen8_page.html">8-ое поколение</a></li>
 		<li><a href="gen9_page.html">9-ое поколение</a></li>
